# Raz_Gateway

./: .gitignore  README.md  nex.txt
Gateway/: instructions push certificate to modem u.md  modemSetup.h  tree_output.txt
Gateway/blinky/: CMakeLists.txt  DigiCertGlobalRootCA.pem  prj.conf
Gateway/blinky/src/: battery.c  button.c  button.h  clock.c  fs.c  fs.h  listing.h  low_power.h  lte.c  lte.h  main.c
Gateway/hci_lpuart/: .gitignore  prj.conf
Gateway/lte_ble_gateway/: .gitignore  README.rst  prj.conf  spm.conf
Gateway/manuf_install/: CONTENTS.txt
blinky/: prj.conf
blinky/src/: battery.h  ble.c  ble.h  buzzer.h  led.c  listing.c  modemSetup.h  services.c
build_blinky/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  partitions.yml  pm.config
build_blinky/mcuboot/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  shared_vars.cmake
build_blinky/spm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  shared_vars.cmake
build_blinky/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  edt.pickle  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd  linker_zephyr_pre1.cmd.dep  runners.yaml  zephyr.dts.d  zephyr.dts.pre
build_hci/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
build_hci/Kconfig/: Kconfig.shield
(+383 files in other folders)
